# ledgerlens

./: .cursorignore  .editorconfig  .env.example  .gitignore  Ledgerlens_System_Design_FINAL.md  README.md  handoff.md  index.md  pyproject.toml
.cursor/rules/: 00-project.mdc  10-python.mdc  20-obsidian-notes.mdc
data/fixtures/: fake_amd_10k_vs_amendment.json  fake_filing.json
data/samples/: chunks_sample.jsonl
docs/: BUILD_PLAN.md  CONVENTIONS.md  GETTING_STARTED.md  PHASE_0_BUILD.md  PHASE_1_BUILD.md  PHASE_2_BUILD.md  architecture.md
docs/adr/: 0000-adr-template.md  0001-single-postgres-over-dedicated-vector-db.md  0002-chunking-strategy-for-SEC-filings.md
docs/planning/: 01_Ledgerlens_Project_Outline.md
ledgerlens/: __init__.py  config.py
ledgerlens/api/: __init__.py
ledgerlens/eval/: __init__.py
ledgerlens/ingestion/: __init__.py  chunking.py  models.py  pipeline.py  quality.py  sections.py  sources.py
ledgerlens/interfaces/: __init__.py  embedder.py  factory.py  llm.py  reranker.py
ledgerlens/observability/: __init__.py
ledgerlens/retrieval/: __init__.py
ledgerlens/storage/: __init__.py  factory.py  fake.py  pipeline.py  postgres.py  schema.sql  store.py
scripts/: check_pgvector.py  embed_and_store.py  ingest.py  smoke_test.py
tests/: test_chunking.py  test_ingestion.py  test_interfaces.py  test_storage.py
